fixed problem where testimonials would not fit inside of cards

--- a/src/pages/portfolio/style.css
+++ b/src/pages/portfolio/style.css
@@ -1,5 +1,75 @@
 .po_items_ho {
     column-width: 15em;
+    column-gap: 4rem;
+}
+
+.po_item {
+    display: inline-block;
+    width: 100%;
+    margin: 0.5rem auto;
+    position: relative;
+    background: var(--secondary-color);
+    padding: 6px;
+    border: 1px solid var(--secondary-color);
+    transition: all 0.3s ease;
+    min-height: 300px;
+    overflow: hidden;
+}
+
+.po_item img {
+    width: 100%;
+    height: auto;
+}
+
+.po_item .content {
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: var(--overlay-color);
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    opacity: 0;
+    border: 1px solid rgba(255, 132, 132, 0.531);
+    transition: opacity 0.3s ease, width 0.3s ease, height 0.3s ease;
+    font-size: calc(10px + 2vmin);
+    text-align: center;
+    /* Allowing text to wrap: */
+    white-space: normal; 
+}
+
+.po_item:hover {
+    box-shadow: 0 10px 15px 0 rgba(252, 117, 140, 0.406);
+}
+
+.po_item:hover .content {
+    height: calc(100% - 30px);
+    width: calc(100% - 30px);
+    opacity: 1;
+    color: var(--secondary-color);
+}
+
+.po_item .content a {
+    background: var(--bg-color);
+    border: solid 1px var(--text-color);
+    padding: 4px 8px;
+    text-align: center;
+    font-size: 1rem;
+    /* Allowing text to wrap: */
+    white-space: normal;
+}
+
+.po_item .content a:hover {
+    text-decoration: none;
+}
+
+
+/* .po_items_ho {
+    column-width: 15em;
     -moz-column-width: 15em;
     -webkit-column-width: 15em;
     column-gap: 4rem;
@@ -78,4 +148,4 @@
 .po_item .content a:hover {
     text-decoration: none;
 }
-
+ */
